Update N8N webhook URL in index.html

--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
             };
 
             try {
-                // N8N Webhook URL - Connected to your workflow
-                const webhookUrl = 'https://yabsira12.app.n8n.cloud/webhook-test/435c6d4a-d498-4ce0-a933-ce53b0c23d5b';
+                // N8N Webhook URL - Connected to your workflow (UPDATED)
+                const webhookUrl = 'https://yabsira12.app.n8n.cloud/webhook/435c6d4a-d498-4ce0-a933-ce53b0c23d5b';
 
                 const response = await fetch(webhookUrl, {
                     method: 'POST',
