--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
             box-shadow: 0 5px 20px rgba(102, 126, 234, 0.4);
         }
 
+        .submit-btn:disabled {
+            opacity: 0.7;
+            cursor: not-allowed;
+        }
+
         .reset-btn {
             background: #ecf0f1;
             color: #333;
@@ -171,7 +176,7 @@
 
         <div id="message" class="message"></div>
 
-        <form id="researchForm">
+        <form id="researchForm" action="https://formspree.io/f/xvgejvrn" method="POST">
             <div class="form-group">
                 <label for="topic">
                     Research Topic <span class="required">*</span>
@@ -239,7 +244,7 @@
             </div>
 
             <div class="button-group">
-                <button type="submit" class="submit-btn">🚀 Submit Research Request</button>
+                <button type="submit" class="submit-btn" id="submitBtn">🚀 Submit Research Request</button>
                 <button type="reset" class="reset-btn">Clear Form</button>
             </div>
         </form>
@@ -249,37 +254,29 @@
         const form = document.getElementById('researchForm');
         const messageDiv = document.getElementById('message');
         const loadingDiv = document.getElementById('loading');
+        const submitBtn = document.getElementById('submitBtn');
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
             messageDiv.style.display = 'none';
             loadingDiv.style.display = 'block';
+            submitBtn.disabled = true;
 
-            // Collect form data
-            const formData = {
-                topic: document.getElementById('topic').value,
-                subtopics: document.getElementById('subtopics').value,
-                description: document.getElementById('description').value,
-                reviewerEmail: document.getElementById('reviewerEmail').value,
-                userEmail: document.getElementById('userEmail').value,
-                timestamp: new Date().toISOString()
-            };
+            // Create FormData object
+            const formData = new FormData(form);
 
             try {
-                // N8N Webhook URL - Connected to your workflow (UPDATED)
-                const webhookUrl = 'https://yabsira12.app.n8n.cloud/webhook/435c6d4a-d498-4ce0-a933-ce53b0c23d5b';
-
-                const response = await fetch(webhookUrl, {
+                const response = await fetch('https://formspree.io/f/xvgejvrn', {
                     method: 'POST',
+                    body: formData,
                     headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify(formData)
+                        'Accept': 'application/json'
+                    }
                 });
 
                 if (response.ok) {
                     messageDiv.className = 'message success';
-                    messageDiv.textContent = '✅ Research request submitted successfully! The reviewer will receive it shortly.';
+                    messageDiv.textContent = '✅ Research request submitted successfully! Check your email for confirmation.';
                     messageDiv.style.display = 'block';
                     form.reset();
                 } else {
@@ -287,11 +284,12 @@
                 }
             } catch (error) {
                 messageDiv.className = 'message error';
-                messageDiv.textContent = '❌ Error submitting form. Please check the webhook URL and try again.';
+                messageDiv.textContent = '❌ Error submitting form. Please try again.';
                 messageDiv.style.display = 'block';
                 console.error('Error:', error);
             } finally {
                 loadingDiv.style.display = 'none';
+                submitBtn.disabled = false;
             }
         });
     </script>
